fixes #1001 - Support downloading

--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -285,10 +285,10 @@
     "ButtonHelp": "Help",
     "OptionAllowUserToManageServer": "Allow this user to manage the server",
     "HeaderFeatureAccess": "Feature Access",
-    "OptionAllowMediaPlayback": "Allow media playback",
-    "OptionAllowBrowsingLiveTv": "Allow browsing of live tv",
-    "OptionAllowDeleteLibraryContent": "Allow deletion of library content",
-    "OptionAllowManageLiveTv": "Allow management of live tv recordings",
+    "OptionAllowMediaPlayback": "Media playback",
+    "OptionAllowBrowsingLiveTv": "Live TV",
+    "OptionAllowDeleteLibraryContent": "Media deletion",
+    "OptionAllowManageLiveTv": "Live TV recording management",
     "OptionAllowRemoteControlOthers": "Allow remote control of other users",
     "OptionAllowRemoteSharedDevices": "Allow remote control of shared devices",
     "OptionAllowRemoteSharedDevicesHelp": "Dlna devices are considered shared until a user begins controlling it.",
@@ -1133,7 +1133,7 @@
     "ViewTypeLiveTvRecordingGroups": "Recordings",
     "ViewTypeLiveTvChannels": "Channels",
     "LabelEasyPinCode": "Easy pin code:",
-    "EasyPasswordHelp":  "Your easy pin code is used for offline access with supported Media Browser apps, and can also be used for easy in-network sign in.",
+    "EasyPasswordHelp": "Your easy pin code is used for offline access with supported Media Browser apps, and can also be used for easy in-network sign in.",
     "LabelInNetworkSignInWithEasyPassword": "Enable in-network sign in with my easy pin code",
     "LabelInNetworkSignInWithEasyPasswordHelp": "If enabled, you'll be able to use your easy pin code to sign in to Media Browser apps from inside your home network. Your regular password will only be needed away from home. If the pin code is left blank, you won't need a password within your home network.",
     "HeaderPassword": "Password",
@@ -1362,7 +1362,8 @@
     "LabelEnableSingleImageInDidlLimitHelp": "Some devices will not render properly if multiple images are embedded within Didl.",
     "TabActivity": "Activity",
     "TitleSync": "Sync",
-    "OptionAllowSyncContent": "Allow syncing media to devices",
+    "OptionAllowSyncContent": "Sync",
+    "OptionAllowContentDownloading": "Media downloading",
     "NameSeasonUnknown": "Season Unknown",
     "NameSeasonNumber": "Season {0}",
     "LabelNewUserNameHelp": "Usernames can contain letters (a-z), numbers (0-9), dashes (-), underscores (_), apostrophes ('), and periods (.)",
