--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/bg_BG.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/bg_BG.json
@@ -48,13 +48,16 @@
     "LabelFailed": "(\u043d\u0435\u0443\u0441\u043f\u0435\u0448\u043d\u043e)",
     "ButtonHelp": "\u041f\u043e\u043c\u043e\u0449",
     "ButtonSave": "\u0417\u0430\u043f\u043e\u043c\u043d\u0438",
+    "ButtonDownload": "Download",
     "SyncJobStatusQueued": "Queued",
     "SyncJobStatusConverting": "Converting",
     "SyncJobStatusFailed": "Failed",
     "SyncJobStatusCancelled": "Cancelled",
     "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusReadyToTransfer": "Ready to Transfer",
     "SyncJobStatusTransferring": "Transferring",
     "SyncJobStatusCompletedWithError": "Synced with errors",
+    "SyncJobItemStatusReadyToTransfer": "Ready to Transfer",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "Add to Collection",
     "NewCollectionNameExample": "Example: Star Wars Collection",
@@ -230,7 +233,6 @@
     "LabelRunningOnPort": "Running on http port {0}.",
     "LabelRunningOnPorts": "Running on http port {0}, and https port {1}.",
     "HeaderLatestFromChannel": "Latest from {0}",
-    "ButtonDownload": "Download",
     "LabelUnknownLanaguage": "Unknown language",
     "HeaderCurrentSubtitles": "Current Subtitles",
     "MessageDownloadQueued": "The download has been queued.",
