--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
@@ -48,13 +48,16 @@
     "LabelFailed": "(fehlgeschlagen)",
     "ButtonHelp": "Hilfe",
     "ButtonSave": "Speichern",
+    "ButtonDownload": "Download",
     "SyncJobStatusQueued": "Warten",
     "SyncJobStatusConverting": "Konvertiere",
     "SyncJobStatusFailed": "Fehlgeschlagen",
     "SyncJobStatusCancelled": "Abgebrochen",
     "SyncJobStatusCompleted": "Synchronisiert",
+    "SyncJobStatusReadyToTransfer": "Fertig zum Transfer",
     "SyncJobStatusTransferring": "\u00dcbertrage",
     "SyncJobStatusCompletedWithError": "Synchronisation mit Fehler",
+    "SyncJobItemStatusReadyToTransfer": "Fertig zum Transfer",
     "LabelCollection": "Sammlung",
     "HeaderAddToCollection": "Zur Sammlung hinzuf\u00fcgen",
     "NewCollectionNameExample": "Beispiel: Star Wars Collection",
@@ -230,7 +233,6 @@
     "LabelRunningOnPort": "L\u00e4uft \u00fcber HTTP Port: {0}",
     "LabelRunningOnPorts": "L\u00e4uft \u00fcber HTTP Port {0} und HTTPS Port {1}.",
     "HeaderLatestFromChannel": "Neuestes von {0}",
-    "ButtonDownload": "Download",
     "LabelUnknownLanaguage": "Unbekannte Sprache",
     "HeaderCurrentSubtitles": "Aktuelle Untertitel",
     "MessageDownloadQueued": "Der Download wurde in die Warteschlange verschoben.",
