--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es.json
@@ -48,13 +48,16 @@
     "LabelFailed": "(failed)",
     "ButtonHelp": "Help",
     "ButtonSave": "Grabar",
+    "ButtonDownload": "Descargar",
     "SyncJobStatusQueued": "Queued",
     "SyncJobStatusConverting": "Converting",
     "SyncJobStatusFailed": "Failed",
     "SyncJobStatusCancelled": "Cancelled",
     "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusReadyToTransfer": "Ready to Transfer",
     "SyncJobStatusTransferring": "Transferring",
     "SyncJobStatusCompletedWithError": "Synced with errors",
+    "SyncJobItemStatusReadyToTransfer": "Ready to Transfer",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "A\u00f1adir a la colecci\u00f3n",
     "NewCollectionNameExample": "Ejemplo: Star Wars Colecci\u00f3n",
@@ -230,7 +233,6 @@
     "LabelRunningOnPort": "Running on http port {0}.",
     "LabelRunningOnPorts": "Running on http port {0}, and https port {1}.",
     "HeaderLatestFromChannel": "Lo \u00faltimo de {0}",
-    "ButtonDownload": "Descargar",
     "LabelUnknownLanaguage": "Idioma desconocido",
     "HeaderCurrentSubtitles": "Subt\u00edtulos actuales",
     "MessageDownloadQueued": "La descarga se ha a\u00f1adido a la cola",
