--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
@@ -48,13 +48,16 @@
     "LabelFailed": "(Fallido)",
     "ButtonHelp": "Ayuda",
     "ButtonSave": "Guardar",
+    "ButtonDownload": "Descargar",
     "SyncJobStatusQueued": "Queued",
     "SyncJobStatusConverting": "Converting",
     "SyncJobStatusFailed": "Failed",
     "SyncJobStatusCancelled": "Cancelled",
     "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusReadyToTransfer": "Ready to Transfer",
     "SyncJobStatusTransferring": "Transferring",
     "SyncJobStatusCompletedWithError": "Synced with errors",
+    "SyncJobItemStatusReadyToTransfer": "Ready to Transfer",
     "LabelCollection": "Colecci\u00f3n",
     "HeaderAddToCollection": "Agregar a Colecci\u00f3n.",
     "NewCollectionNameExample": "Ejemplo: Colecci\u00f3n Guerra de las Galaxias",
@@ -230,7 +233,6 @@
     "LabelRunningOnPort": "Ejecut\u00e1ndose en el puerto http {0}.",
     "LabelRunningOnPorts": "Ejecut\u00e1ndose en el puerto http {0} y el puerto https {1}.",
     "HeaderLatestFromChannel": "M\u00e1s recientes desde {0}",
-    "ButtonDownload": "Descargar",
     "LabelUnknownLanaguage": "Idioma desconocido",
     "HeaderCurrentSubtitles": "Subtitulos Actuales",
     "MessageDownloadQueued": "La descarga se ha agregado a la cola.",
