--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
@@ -48,13 +48,16 @@
     "LabelFailed": "(\u00e9chou\u00e9)",
     "ButtonHelp": "Aide",
     "ButtonSave": "Sauvegarder",
+    "ButtonDownload": "T\u00e9l\u00e9chargement",
     "SyncJobStatusQueued": "Mis en file d'attente",
     "SyncJobStatusConverting": "Conversion en cours",
     "SyncJobStatusFailed": "Echec",
     "SyncJobStatusCancelled": "Annul\u00e9",
     "SyncJobStatusCompleted": "Synchronis\u00e9",
+    "SyncJobStatusReadyToTransfer": "Ready to Transfer",
     "SyncJobStatusTransferring": "Transfert en cours",
     "SyncJobStatusCompletedWithError": "Synchronis\u00e9, mais des erreurs sont apparues",
+    "SyncJobItemStatusReadyToTransfer": "Ready to Transfer",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "Ajouter \u00e0 la collection",
     "NewCollectionNameExample": "Exemple: Collection Star Wars",
@@ -94,7 +97,7 @@
     "HeaderSelectSubtitles": "S\u00e9lectionner sous-titres",
     "ButtonMarkForRemoval": "Supprimer de l'appareil",
     "ButtonUnmarkForRemoval": "Annuler la suppression de l'appareil",
-    "LabelSyncQualityHelp": "S\u00e9lectionnez Haute qualit\u00e9 pour obtenir la qualit\u00e9 optimale support\u00e9e par l'appareil. Qualit\u00e9 moyenne et basse qualit\u00e9 r\u00e9duiront le d\u00e9bit autoris\u00e9.",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate.",
     "LabelDefaultStream": "(Par d\u00e9faut)",
     "LabelForcedStream": "(Forc\u00e9)",
     "LabelDefaultForcedStream": "(Par d\u00e9faut\/Forc\u00e9)",
@@ -230,7 +233,6 @@
     "LabelRunningOnPort": "En cours d'ex\u00e9cution sur le port http {0}.",
     "LabelRunningOnPorts": "En cours d'ex\u00e9cution sur le port http {0} et https {1}.",
     "HeaderLatestFromChannel": "Les plus r\u00e9cents de {0}",
-    "ButtonDownload": "T\u00e9l\u00e9chargement",
     "LabelUnknownLanaguage": "Langue inconnue",
     "HeaderCurrentSubtitles": "Sous-titres actuels",
     "MessageDownloadQueued": "Le t\u00e9l\u00e9chargement a \u00e9t\u00e9 mis en file d'attente.",
