--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/it.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/it.json
@@ -48,13 +48,16 @@
     "LabelFailed": "(fallito)",
     "ButtonHelp": "Aiuto",
     "ButtonSave": "Salva",
+    "ButtonDownload": "Download",
     "SyncJobStatusQueued": "In Coda",
     "SyncJobStatusConverting": "Conversione",
     "SyncJobStatusFailed": "Fallito",
     "SyncJobStatusCancelled": "Cancellato",
     "SyncJobStatusCompleted": "Sinc.to",
+    "SyncJobStatusReadyToTransfer": "Ready to Transfer",
     "SyncJobStatusTransferring": "Trasferimento",
     "SyncJobStatusCompletedWithError": "Sincronizzato con errori",
+    "SyncJobItemStatusReadyToTransfer": "Ready to Transfer",
     "LabelCollection": "Collezione",
     "HeaderAddToCollection": "Aggiungi alla Collezione",
     "NewCollectionNameExample": "Esempio: Collezione Star wars",
@@ -230,7 +233,6 @@
     "LabelRunningOnPort": "In esecuzione sulla porta HTTP {0}.",
     "LabelRunningOnPorts": "In esecuzione sulla porta HTTP {0}, e porta HTTPS {1}",
     "HeaderLatestFromChannel": "Ultime da {0}",
-    "ButtonDownload": "Download",
     "LabelUnknownLanaguage": "lingua sconosciuta",
     "HeaderCurrentSubtitles": "Sottotitoli correnti",
     "MessageDownloadQueued": "Il download \u00e8 stato accodato.",
