--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
@@ -48,13 +48,16 @@
     "LabelFailed": "(Feilet)",
     "ButtonHelp": "Help",
     "ButtonSave": "lagre",
+    "ButtonDownload": "Nedlasting",
     "SyncJobStatusQueued": "Queued",
     "SyncJobStatusConverting": "Converting",
     "SyncJobStatusFailed": "Failed",
     "SyncJobStatusCancelled": "Cancelled",
     "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusReadyToTransfer": "Ready to Transfer",
     "SyncJobStatusTransferring": "Transferring",
     "SyncJobStatusCompletedWithError": "Synced with errors",
+    "SyncJobItemStatusReadyToTransfer": "Ready to Transfer",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "Legg Til I Samling",
     "NewCollectionNameExample": "Eksempel: Star Wars Samling",
@@ -230,7 +233,6 @@
     "LabelRunningOnPort": "Running on http port {0}.",
     "LabelRunningOnPorts": "Running on http port {0}, and https port {1}.",
     "HeaderLatestFromChannel": "Siste fra {0}",
-    "ButtonDownload": "Nedlasting",
     "LabelUnknownLanaguage": "Ukjent Spr\u00e5k",
     "HeaderCurrentSubtitles": "N\u00e5v\u00e6rende undertekster",
     "MessageDownloadQueued": "Nedlastingen har blitt satt i k\u00f8.",
