--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
@@ -48,13 +48,16 @@
     "LabelFailed": "(mislukt)",
     "ButtonHelp": "Hulp",
     "ButtonSave": "Opslaan",
+    "ButtonDownload": "Download",
     "SyncJobStatusQueued": "Queued",
     "SyncJobStatusConverting": "Converting",
     "SyncJobStatusFailed": "Failed",
     "SyncJobStatusCancelled": "Cancelled",
     "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusReadyToTransfer": "Ready to Transfer",
     "SyncJobStatusTransferring": "Transferring",
     "SyncJobStatusCompletedWithError": "Synced with errors",
+    "SyncJobItemStatusReadyToTransfer": "Ready to Transfer",
     "LabelCollection": "Verzameling",
     "HeaderAddToCollection": "Toevoegen aan verzameling",
     "NewCollectionNameExample": "Voorbeeld: Star Wars Collectie",
@@ -230,7 +233,6 @@
     "LabelRunningOnPort": "Draait op http poort {0}.",
     "LabelRunningOnPorts": "Draait op http poort {0} en https poort {1}.",
     "HeaderLatestFromChannel": "Laatste van {0}",
-    "ButtonDownload": "Download",
     "LabelUnknownLanaguage": "Onbekende taal",
     "HeaderCurrentSubtitles": "Huidige Ondertitels",
     "MessageDownloadQueued": "De download is in de wachtrij geplaatst.",
