--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/sv.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/sv.json
@@ -48,13 +48,16 @@
     "LabelFailed": "(misslyckades)",
     "ButtonHelp": "Hj\u00e4lp",
     "ButtonSave": "Spara",
+    "ButtonDownload": "Ladda ned",
     "SyncJobStatusQueued": "Queued",
     "SyncJobStatusConverting": "Converting",
     "SyncJobStatusFailed": "Failed",
     "SyncJobStatusCancelled": "Cancelled",
     "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusReadyToTransfer": "Ready to Transfer",
     "SyncJobStatusTransferring": "Transferring",
     "SyncJobStatusCompletedWithError": "Synced with errors",
+    "SyncJobItemStatusReadyToTransfer": "Ready to Transfer",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "L\u00e4gg till samling",
     "NewCollectionNameExample": "Exemple: Star Wars-samling",
@@ -230,7 +233,6 @@
     "LabelRunningOnPort": "Running on http port {0}.",
     "LabelRunningOnPorts": "Running on http port {0}, and https port {1}.",
     "HeaderLatestFromChannel": "Senaste fr\u00e5n {0}",
-    "ButtonDownload": "Ladda ned",
     "LabelUnknownLanaguage": "Ok\u00e4nt spr\u00e5k",
     "HeaderCurrentSubtitles": "Aktuella undertexter",
     "MessageDownloadQueued": "Nedladdningen har lagts i k\u00f6n.",
