--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/zh_CN.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/zh_CN.json
@@ -48,13 +48,16 @@
     "LabelFailed": "(\u5931\u8d25)",
     "ButtonHelp": "Help",
     "ButtonSave": "\u50a8\u5b58",
+    "ButtonDownload": "\u4e0b\u8f7d",
     "SyncJobStatusQueued": "Queued",
     "SyncJobStatusConverting": "Converting",
     "SyncJobStatusFailed": "Failed",
     "SyncJobStatusCancelled": "Cancelled",
     "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusReadyToTransfer": "Ready to Transfer",
     "SyncJobStatusTransferring": "Transferring",
     "SyncJobStatusCompletedWithError": "Synced with errors",
+    "SyncJobItemStatusReadyToTransfer": "Ready to Transfer",
     "LabelCollection": "\u5408\u96c6",
     "HeaderAddToCollection": "\u52a0\u5165\u5408\u96c6",
     "NewCollectionNameExample": "\u4f8b\u5982\uff1a\u661f\u7403\u5927\u6218\u5408\u96c6",
@@ -230,7 +233,6 @@
     "LabelRunningOnPort": "\u6b63\u8fd0\u884c\u4e8eHTTP\u7aef\u53e3 {0}.",
     "LabelRunningOnPorts": "\u6b63\u8fd0\u884c\u4e8eHTTP\u7aef\u53e3 {0}\uff0c\u548c https\u7aef\u53e3{1}.",
     "HeaderLatestFromChannel": "\u6700\u65b0\u7684 {0}",
-    "ButtonDownload": "\u4e0b\u8f7d",
     "LabelUnknownLanaguage": "\u672a\u77e5\u8bed\u8a00",
     "HeaderCurrentSubtitles": "\u5f53\u524d\u5b57\u5e55",
     "MessageDownloadQueued": "\u4e0b\u8f7d\u5df2\u52a0\u5165\u961f\u5217\u3002",
