--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/kk.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/kk.json
@@ -48,13 +48,16 @@
     "LabelFailed": "(\u0441\u04d9\u0442\u0441\u0456\u0437)",
     "ButtonHelp": "\u0410\u043d\u044b\u049b\u0442\u0430\u043c\u0430\u0493\u0430",
     "ButtonSave": "\u0421\u0430\u049b\u0442\u0430\u0443",
+    "ButtonDownload": "\u0416\u04af\u043a\u0442\u0435\u043f \u0430\u043b\u0443",
     "SyncJobStatusQueued": "\u041a\u0435\u0437\u0435\u043a\u0442\u0435",
     "SyncJobStatusConverting": "\u0422\u04af\u0440\u043b\u0435\u043d\u0434\u0456\u0440\u0443\u0434\u0435",
     "SyncJobStatusFailed": "\u0421\u04d9\u0442\u0441\u0456\u0437",
     "SyncJobStatusCancelled": "\u0411\u043e\u043b\u0434\u044b\u0440\u044b\u043b\u043c\u0430\u0493\u0430\u043d",
     "SyncJobStatusCompleted": "\u04ae\u043d\u0434\u0435\u0441\u0442\u0456\u0440\u0456\u043b\u0433\u0435\u043d",
+    "SyncJobStatusReadyToTransfer": "\u0410\u0443\u044b\u0441\u0442\u044b\u0440\u044b\u043b\u0443\u0493\u0430 \u0434\u0430\u0439\u044b\u043d",
     "SyncJobStatusTransferring": "\u0410\u0443\u044b\u0441\u0442\u044b\u0440\u044b\u043b\u0443\u0434\u0430",
     "SyncJobStatusCompletedWithError": "\u049a\u0430\u0442\u0435\u043b\u0435\u0440\u043c\u0435\u043d \u04af\u043d\u0434\u0435\u0441\u0442\u0456\u0440\u0456\u043b\u0433\u0435\u043d",
+    "SyncJobItemStatusReadyToTransfer": "\u0410\u0443\u044b\u0441\u0442\u044b\u0440\u044b\u043b\u0443\u0493\u0430 \u0434\u0430\u0439\u044b\u043d",
     "LabelCollection": "\u0416\u0438\u044b\u043d\u0442\u044b\u049b",
     "HeaderAddToCollection": "\u0416\u0438\u044b\u043d\u0442\u044b\u049b\u049b\u0430 \u04af\u0441\u0442\u0435\u0443",
     "NewCollectionNameExample": "\u041c\u044b\u0441\u0430\u043b: \u0416\u04b1\u043b\u0434\u044b\u0437 \u0441\u043e\u0493\u044b\u0441\u0442\u0430\u0440\u044b (\u0436\u0438\u044b\u043d\u0442\u044b\u049b)",
@@ -230,7 +233,6 @@
     "LabelRunningOnPort": "{0} http-\u043f\u043e\u0440\u0442\u044b\u043d\u0434\u0430 \u0436\u04b1\u043c\u044b\u0441 \u0456\u0441\u0442\u0435\u0439\u0434\u0456.",
     "LabelRunningOnPorts": "{0} http-\u043f\u043e\u0440\u0442\u044b\u043d\u0434\u0430 \u0436\u04d9\u043d\u0435 {1} https-\u043f\u043e\u0440\u0442\u044b\u043d\u0434\u0430 \u0436\u04b1\u043c\u044b\u0441 \u0456\u0441\u0442\u0435\u0439\u0434\u0456.",
     "HeaderLatestFromChannel": "\u0415\u04a3 \u043a\u0435\u0439\u0456\u043d\u0433\u0456 {0}",
-    "ButtonDownload": "\u0416\u04af\u043a\u0442\u0435\u043f \u0430\u043b\u0443",
     "LabelUnknownLanaguage": "\u0411\u0435\u043b\u0433\u0456\u0441\u0456\u0437 \u0442\u0456\u043b",
     "HeaderCurrentSubtitles": "\u0410\u0493\u044b\u043c\u0434\u044b\u049b \u0441\u0443\u0431\u0442\u0438\u0442\u0440\u043b\u0435\u0440",
     "MessageDownloadQueued": "\u0416\u04af\u043a\u0442\u0435\u0443 \u043a\u0435\u0437\u0435\u043a\u043a\u0435 \u043a\u0456\u0440\u0433\u0456\u0437\u0456\u043b\u0434\u0456.",
