--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
@@ -48,13 +48,16 @@
     "LabelFailed": "(falhou)",
     "ButtonHelp": "Ajuda",
     "ButtonSave": "Salvar",
+    "ButtonDownload": "Download",
     "SyncJobStatusQueued": "Enfileirado",
     "SyncJobStatusConverting": "Convertendo",
     "SyncJobStatusFailed": "Falhou",
     "SyncJobStatusCancelled": "Cancelado",
     "SyncJobStatusCompleted": "Sincronizado",
+    "SyncJobStatusReadyToTransfer": "Pronto para Transferir",
     "SyncJobStatusTransferring": "Transferindo",
     "SyncJobStatusCompletedWithError": "Sincronizado com erros",
+    "SyncJobItemStatusReadyToTransfer": "Pronto para Transferir",
     "LabelCollection": "Cole\u00e7\u00e3o",
     "HeaderAddToCollection": "Adicionar \u00e0 Cole\u00e7\u00e3o",
     "NewCollectionNameExample": "Exemplo: Cole\u00e7\u00e3o Star Wars",
@@ -230,7 +233,6 @@
     "LabelRunningOnPort": "Executando na porta http {0}.",
     "LabelRunningOnPorts": "Executando na porta http {0} e porta https {1}.",
     "HeaderLatestFromChannel": "Mais recentes de {0}",
-    "ButtonDownload": "Download",
     "LabelUnknownLanaguage": "Idioma desconhecido",
     "HeaderCurrentSubtitles": "Legendas Atuais",
     "MessageDownloadQueued": "O download foi enfileirado.",
