--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
@@ -14,12 +14,12 @@
     "FileReadError": "Ha ocurrido un error al leer el archivo.",
     "DeleteUser": "Eliminar Usuario",
     "DeleteUserConfirmation": "\u00bfEst\u00e1 seguro de querer eliminar este usuario?",
-    "PasswordResetHeader": "Reset Password",
+    "PasswordResetHeader": "Restablecer Contrase\u00f1a",
     "PasswordResetComplete": "La contrase\u00f1a ha sido restablecida.",
-    "PinCodeResetComplete": "The pin code has been reset.",
+    "PinCodeResetComplete": "El c\u00f3digo pin ha sido restablecido.",
     "PasswordResetConfirmation": "\u00bfEst\u00e1 seguro de querer restablecer la contrase\u00f1a?",
-    "PinCodeResetConfirmation": "Are you sure you wish to reset the pin code?",
-    "HeaderPinCodeReset": "Reset Pin Code",
+    "PinCodeResetConfirmation": "\u00bfEsta seguro de querer restablecer el c\u00f3digo pin?",
+    "HeaderPinCodeReset": "Restablecer C\u00f3digo Pin",
     "PasswordSaved": "Contrase\u00f1a guardada.",
     "PasswordMatchError": "La Contrase\u00f1a y la confirmaci\u00f3n de la contrase\u00f1a deben coincidir.",
     "OptionRelease": "Versi\u00f3n Oficial",
@@ -49,15 +49,15 @@
     "ButtonHelp": "Ayuda",
     "ButtonSave": "Guardar",
     "ButtonDownload": "Descargar",
-    "SyncJobStatusQueued": "Queued",
-    "SyncJobStatusConverting": "Converting",
-    "SyncJobStatusFailed": "Failed",
-    "SyncJobStatusCancelled": "Cancelled",
-    "SyncJobStatusCompleted": "Synced",
-    "SyncJobStatusReadyToTransfer": "Ready to Transfer",
-    "SyncJobStatusTransferring": "Transferring",
-    "SyncJobStatusCompletedWithError": "Synced with errors",
-    "SyncJobItemStatusReadyToTransfer": "Ready to Transfer",
+    "SyncJobStatusQueued": "En cola",
+    "SyncJobStatusConverting": "Convirti\u00e9ndo",
+    "SyncJobStatusFailed": "Fallido",
+    "SyncJobStatusCancelled": "Cancelado",
+    "SyncJobStatusCompleted": "Sincronizado",
+    "SyncJobStatusReadyToTransfer": "Listo para Transferir",
+    "SyncJobStatusTransferring": "Transfiri\u00e9ndo",
+    "SyncJobStatusCompletedWithError": "Sincronizado con errores",
+    "SyncJobItemStatusReadyToTransfer": "Listo para Transferir",
     "LabelCollection": "Colecci\u00f3n",
     "HeaderAddToCollection": "Agregar a Colecci\u00f3n.",
     "NewCollectionNameExample": "Ejemplo: Colecci\u00f3n Guerra de las Galaxias",
@@ -95,9 +95,9 @@
     "LabelFree": "Gratis",
     "HeaderSelectAudio": "Seleccionar Audio",
     "HeaderSelectSubtitles": "Seleccionar Subtitulos",
-    "ButtonMarkForRemoval": "Remove from device",
-    "ButtonUnmarkForRemoval": "Cancel removal from device",
-    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate.",
+    "ButtonMarkForRemoval": "Remover de dispositivo",
+    "ButtonUnmarkForRemoval": "Cancelar remover de dispositivo",
+    "LabelSyncQualityHelp": "Use alta calidad para la calidad m\u00e1xima soportada por el dispositivo. Media y baja calidad para reducir la transferencia de datos permitida.",
     "LabelDefaultStream": "(Por defecto)",
     "LabelForcedStream": "(Forzado)",
     "LabelDefaultForcedStream": "(Por Defecto\/Forzado)",
@@ -218,8 +218,8 @@
     "MessageConfirmRestart": "\u00bfEst\u00e1 seguro de querer reiniciar el Servidor de Media Browser?",
     "MessageConfirmShutdown": "\u00bfEst\u00e1 seguro de querer apagar el Servidor de Media Browser?",
     "ButtonUpdateNow": "Actualizar Ahora",
-    "ValueItemCount": "{0} item",
-    "ValueItemCountPlural": "{0} items",
+    "ValueItemCount": "{0} \u00edtem",
+    "ValueItemCountPlural": "{0} \u00edtems",
     "NewVersionOfSomethingAvailable": "\u00a1Una nueva versi\u00f3n de {0} esta disponible!",
     "VersionXIsAvailableForDownload": "La versi\u00f3n {0} ahora esta disponible para descargar.",
     "LabelVersionNumber": "Versi\u00f3n {0}",
@@ -684,7 +684,7 @@
     "MessageForgotPasswordFileCreated": "El siguiente archivo fue creado en tu servidor y contiene instrucciones de como proceder.",
     "MessageForgotPasswordFileExpiration": "El pin de restablecimiento expirara en {0}.",
     "MessageInvalidForgotPasswordPin": "Se introdujo un pin expirado o invalido. Por favor intente de nuevo.",
-    "MessagePasswordResetForUsers": "Passwords have been removed for the following users:",
+    "MessagePasswordResetForUsers": "Las contrase\u00f1as han sido eliminadas de los siguientes usuarios:",
     "HeaderInviteGuest": "Agregar un Invitado",
     "ButtonLinkMyMediaBrowserAccount": "Enlazar mi cuenta ahora",
     "MessageConnectAccountRequiredToInviteGuest": "Para poder agregar invitados primero necesitas vincular tu cuenta de Media Browser a este servidor.",
