--- a/MediaBrowser.Server.Implementations/Localization/Server/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/es_MX.json
@@ -423,13 +423,13 @@
     "ViewTypeLiveTvRecordingGroups": "Grabaciones",
     "ViewTypeLiveTvChannels": "Canales",
     "LabelEasyPinCode": "C\u00f3digo pin sencillo:",
-    "EasyPasswordHelp": "Your easy pin code is used for offline access with supported Media Browser apps, and can also be used for easy in-network sign in.",
-    "LabelInNetworkSignInWithEasyPassword": "Enable in-network sign in with my easy pin code",
-    "LabelInNetworkSignInWithEasyPasswordHelp": "If enabled, you'll be able to use your easy pin code to sign in to Media Browser apps from inside your home network. Your regular password will only be needed away from home. If the pin code is left blank, you won't need a password within your home network.",
+    "EasyPasswordHelp": "Tu c\u00f3digo pin sencillo es usado para el acceso fuera de linea con las aplicaciones Media Browser soportadas, y tambi\u00e9n puede ser usado para un inicio de sesi\u00f3n mas f\u00e1cil cuando esta conectado a su red.",
+    "LabelInNetworkSignInWithEasyPassword": "Habilitar inicio de sesi\u00f3n con mi c\u00f3digo pin sencillo para conexiones dentro de la red.",
+    "LabelInNetworkSignInWithEasyPasswordHelp": "Si esta habilitado. Podr\u00e1s usar tu c\u00f3digo pin sencillo para iniciar sesi\u00f3n en las aplicaciones Media Browser dentro de tu red de hogar. La contrase\u00f1a regular sera necesaria solamente cuando este fuera de casa. Si el c\u00f3digo pin se deja en blanco, no se necesitara contrase\u00f1a dentro de su casa.",
     "HeaderPassword": "Contrase\u00f1a",
     "HeaderLocalAccess": "Acceso Local",
     "HeaderViewOrder": "Orden de Despliegue",
-    "ButtonResetEasyPassword": "Reset easy pin code",
+    "ButtonResetEasyPassword": "Restaurar c\u00f3digo pin sencillo",
     "LabelSelectUserViewOrder": "Seleccione el orden en que sus vistas ser\u00e1n desplegadas dentro de las apps de Media Browser",
     "LabelMetadataRefreshMode": "Modo de actualizaci\u00f3n de metadatos:",
     "LabelImageRefreshMode": "Modo de actualizaci\u00f3n de im\u00e1genes:",
@@ -649,8 +649,8 @@
     "LabelEnableSingleImageInDidlLimitHelp": "Algunos dispositivos no renderisaran apropiadamente si hay m\u00faltiples im\u00e1genes incrustadas en el Didl",
     "TabActivity": "Actividad",
     "TitleSync": "Sinc",
-    "OptionAllowSyncContent": "Sync",
-    "OptionAllowContentDownloading": "Media downloading",
+    "OptionAllowSyncContent": "Sinc.",
+    "OptionAllowContentDownloading": "Descarga de medios",
     "NameSeasonUnknown": "Temporada Desconocida",
     "NameSeasonNumber": "Temporada {0}",
     "LabelNewUserNameHelp": "Los nombres de usuario pueden contener letras (a-z), n\u00fameros (0-9), guiones (-), guiones bajos (_) y puntos (.)",
@@ -689,7 +689,7 @@
     "LabelEnableVideoImageExtraction": "Habilitar extracci\u00f3n de im\u00e1genes de video",
     "VideoImageExtractionHelp": "Para videos que no cuenten con im\u00e1genes, y para los que no podemos encontrar im\u00e1genes en Internet. Esto incrementar\u00e1 un poco el tiempo de la exploraci\u00f3n inicial de las bibliotecas, pero resultar\u00e1 en una presentaci\u00f3n m\u00e1s agradable.",
     "LabelEnableChapterImageExtractionForMovies": "Extraer im\u00e1genes de cap\u00edtulos para Pel\u00edculas",
-    "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
+    "LabelChapterImageExtractionForMoviesHelp": "Extraer las im\u00e1genes de los cap\u00edtulos permitir\u00e1 a sus clientes mostrar gr\u00e1ficamente los men\u00fas de selecci\u00f3n de escenas. El proceso puede ser lento, hacer uso intensivo del cpu y requerir el uso de varios gigabytes de espacio. Se ejecuta como una tarea nocturna programada, aunque puede configurarse en el \u00e1rea de tareas programadas. No se recomienda ejecutarlo durante un horario de uso intensivo.",
     "LabelEnableAutomaticPortMapping": "Habilitar mapeo autom\u00e1tico de puertos",
     "LabelEnableAutomaticPortMappingHelp": "UPnP permite la configuraci\u00f3n de ruteador de manera autom\u00e1tica, para acceso remoto de manera f\u00e1cil. Eso puede no funcionar con algunos modelos de ruteadores.",
     "HeaderTermsOfService": "T\u00e9rminos del Servicio de Media Browser",
@@ -712,9 +712,9 @@
     "HeaderAudio": "Audio",
     "HeaderVideo": "Video",
     "HeaderPaths": "Rutas",
-    "CategorySync": "Sync",
-    "HeaderEasyPinCode": "Easy Pin Code",
-    "RegisterWithPayPal": "Register with PayPal",
+    "CategorySync": "Sinc.",
+    "HeaderEasyPinCode": "C\u00f3digo Pin Sencillo",
+    "RegisterWithPayPal": "Registrar con PayPal",
     "HeaderSyncRequiresSupporterMembership": "Sinc requiere de una Membres\u00eda de Aficionado",
     "HeaderEnjoyDayTrial": "Disfrute de una Prueba Gratuita por 14 D\u00edas",
     "LabelSyncTempPath": "Trayectoria de archivos temporales:",
@@ -942,10 +942,10 @@
     "ButtonHelp": "Ayuda",
     "OptionAllowUserToManageServer": "Permitir a este usuario administrar el servidor",
     "HeaderFeatureAccess": "Permisos de acceso",
-    "OptionAllowMediaPlayback": "Media playback",
-    "OptionAllowBrowsingLiveTv": "Live TV",
-    "OptionAllowDeleteLibraryContent": "Media deletion",
-    "OptionAllowManageLiveTv": "Live TV recording management",
+    "OptionAllowMediaPlayback": "Reproducci\u00f3n de medios",
+    "OptionAllowBrowsingLiveTv": "TV en vivo",
+    "OptionAllowDeleteLibraryContent": "Eliminaci\u00f3n de medios",
+    "OptionAllowManageLiveTv": "Administraci\u00f3n de grabaciones de TV en vivo",
     "OptionAllowRemoteControlOthers": "Permitir control remoto de otros usuarios",
     "OptionAllowRemoteSharedDevices": "Permitir control remoto de dispositivos compartidos",
     "OptionAllowRemoteSharedDevicesHelp": "Los dispositivos dnla son considerados como compartidos hasta que alg\u00fan usuario comienza a controlarlo.",
@@ -1003,7 +1003,7 @@
     "LabelAutomaticUpdatesTvdbHelp": "Al habilitarlo, se descargar\u00e1n autom\u00e1ticamente nuevas im\u00e1genes conforme son a\u00f1adidas a TheTVDB.com. Las im\u00e1genes existentes no ser\u00e1n reemplazadas.",
     "LabelFanartApiKey": "Clave api personal:",
     "LabelFanartApiKeyHelp": "Solicitar fanart sin una clave API personal muestra los resultados que fueron aprobados hace 7 d\u00edas. Con una clave API personal se reduce a 48 horas y si eres miembro VIP de fanart ser\u00e1 alrededor de 10 minutos.",
-    "ExtractChapterImagesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs when videos are discovered, and also as a nightly scheduled task. The schedule is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
+    "ExtractChapterImagesHelp": "Extraer las im\u00e1genes de los cap\u00edtulos permitir\u00e1 a sus clientes mostrar gr\u00e1ficamente los men\u00fas de selecci\u00f3n de escenas. El proceso puede ser lento, hacer uso intensivo del cpu y requerir el uso de varios gigabytes de espacio. Se ejecuta como una tarea nocturna programada, aunque puede configurarse en el \u00e1rea de tareas programadas. No se recomienda ejecutarlo durante un horario de uso intensivo.",
     "LabelMetadataDownloadLanguage": "Lenguaje preferido para descargas:",
     "ButtonAutoScroll": "Auto-desplazamiento",
     "LabelImageSavingConvention": "Convenci\u00f3n de almacenamiento de im\u00e1genes:",
@@ -1325,7 +1325,7 @@
     "NotificationOptionInstallationFailed": "Falla de instalaci\u00f3n",
     "NotificationOptionNewLibraryContent": "Nuevo contenido agregado",
     "NotificationOptionNewLibraryContentMultiple": "Nuevo contenido agregado (varios)",
-    "NotificationOptionCameraImageUploaded": "Camera image uploaded",
+    "NotificationOptionCameraImageUploaded": "Imagen de la c\u00e1mara subida",
     "SendNotificationHelp": "Por defecto, las notificaciones son enviadas a la bandeja de entrada del panel de control. Navegue el cat\u00e1logo de  complementos para instalar opciones de notificaci\u00f3n adicionales.",
     "NotificationOptionServerRestartRequired": "Reinicio del servidor requerido",
     "LabelNotificationEnabled": "Habilitar esta notificaci\u00f3n",
