--- a/MediaBrowser.Server.Implementations/Localization/Server/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/fr.json
@@ -649,8 +649,8 @@
     "LabelEnableSingleImageInDidlLimitHelp": "Quelques p\u00e9riph\u00e9riques ne fourniront pas un rendu correct si plusieurs images sont int\u00e9gr\u00e9es dans Didl",
     "TabActivity": "Activit\u00e9",
     "TitleSync": "Sync.",
-    "OptionAllowSyncContent": "Sync",
-    "OptionAllowContentDownloading": "Media downloading",
+    "OptionAllowSyncContent": "Synchroniser",
+    "OptionAllowContentDownloading": "T\u00e9l\u00e9chargement du m\u00e9dia en cours",
     "NameSeasonUnknown": "Saison inconnue",
     "NameSeasonNumber": "Saison {0}",
     "LabelNewUserNameHelp": "Les noms d'utilisateur peuvent contenir des lettres (a-z), des chiffres (0-9), des tirets (-), des tirets bas (_), des apostrophes (') et des points (.).",
@@ -942,10 +942,10 @@
     "ButtonHelp": "Aide",
     "OptionAllowUserToManageServer": "Autoriser la gestion du serveur \u00e0 cet utilisateur",
     "HeaderFeatureAccess": "Acc\u00e8s aux fonctionnalit\u00e9s",
-    "OptionAllowMediaPlayback": "Media playback",
-    "OptionAllowBrowsingLiveTv": "Live TV",
-    "OptionAllowDeleteLibraryContent": "Media deletion",
-    "OptionAllowManageLiveTv": "Live TV recording management",
+    "OptionAllowMediaPlayback": "Lecture du m\u00e9dia en cours",
+    "OptionAllowBrowsingLiveTv": "TV Live",
+    "OptionAllowDeleteLibraryContent": "Suppression du m\u00e9dia",
+    "OptionAllowManageLiveTv": "Gestion des enregistrements TV Live",
     "OptionAllowRemoteControlOthers": "Autoriser le contr\u00f4le \u00e0 distance des autres utilisateurs",
     "OptionAllowRemoteSharedDevices": "Autoriser le contr\u00f4le \u00e0 distance des appareils partag\u00e9s",
     "OptionAllowRemoteSharedDevicesHelp": "Les p\u00e9riph\u00e9riques Dlna sont consid\u00e9r\u00e9s comme partag\u00e9s tant qu'un utilisateur ne commence pas \u00e0 le contr\u00f4ler.",
