--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
@@ -54,10 +54,10 @@
     "SyncJobStatusFailed": "Echec",
     "SyncJobStatusCancelled": "Annul\u00e9",
     "SyncJobStatusCompleted": "Synchronis\u00e9",
-    "SyncJobStatusReadyToTransfer": "Ready to Transfer",
+    "SyncJobStatusReadyToTransfer": "Pr\u00eat pour le transfert",
     "SyncJobStatusTransferring": "Transfert en cours",
     "SyncJobStatusCompletedWithError": "Synchronis\u00e9, mais des erreurs sont apparues",
-    "SyncJobItemStatusReadyToTransfer": "Ready to Transfer",
+    "SyncJobItemStatusReadyToTransfer": "Pr\u00eat pour le transfert",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "Ajouter \u00e0 la collection",
     "NewCollectionNameExample": "Exemple: Collection Star Wars",
@@ -97,7 +97,7 @@
     "HeaderSelectSubtitles": "S\u00e9lectionner sous-titres",
     "ButtonMarkForRemoval": "Supprimer de l'appareil",
     "ButtonUnmarkForRemoval": "Annuler la suppression de l'appareil",
-    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate.",
+    "LabelSyncQualityHelp": "Choisissez haute qualit\u00e9 pour obtenir la qualit\u00e9 maximale support\u00e9e par l'appareil. Moyenne et basse qualit\u00e9 r\u00e9duiront le d\u00e9bit autoris\u00e9.",
     "LabelDefaultStream": "(Par d\u00e9faut)",
     "LabelForcedStream": "(Forc\u00e9)",
     "LabelDefaultForcedStream": "(Par d\u00e9faut\/Forc\u00e9)",
