--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -285,10 +285,10 @@
     "ButtonHelp": "Help",
     "OptionAllowUserToManageServer": "Allow this user to manage the server",
     "HeaderFeatureAccess": "Feature Access",
-    "OptionAllowMediaPlayback": "Media playback",
-    "OptionAllowBrowsingLiveTv": "Live TV",
-    "OptionAllowDeleteLibraryContent": "Media deletion",
-    "OptionAllowManageLiveTv": "Live TV recording management",
+    "OptionAllowMediaPlayback": "Allow media playback",
+    "OptionAllowBrowsingLiveTv": "Allow Live TV access",
+    "OptionAllowDeleteLibraryContent": "Allow media deletion",
+    "OptionAllowManageLiveTv": "Allow Live TV recording management",
     "OptionAllowRemoteControlOthers": "Allow remote control of other users",
     "OptionAllowRemoteSharedDevices": "Allow remote control of shared devices",
     "OptionAllowRemoteSharedDevicesHelp": "Dlna devices are considered shared until a user begins controlling it.",
@@ -1362,8 +1362,8 @@
     "LabelEnableSingleImageInDidlLimitHelp": "Some devices will not render properly if multiple images are embedded within Didl.",
     "TabActivity": "Activity",
     "TitleSync": "Sync",
-    "OptionAllowSyncContent": "Sync",
-    "OptionAllowContentDownloading": "Media downloading",
+    "OptionAllowSyncContent": "Allow Sync",
+    "OptionAllowContentDownloading": "Allow media downloading",
     "NameSeasonUnknown": "Season Unknown",
     "NameSeasonNumber": "Season {0}",
     "LabelNewUserNameHelp": "Usernames can contain letters (a-z), numbers (0-9), dashes (-), underscores (_), apostrophes ('), and periods (.)",
